src/vm/snapshots/hebi__vm__tests__init_data_class_derived_with_multiple_methods.snap
---
source: src/vm/tests.rs
expression: snapshot
---
Ok(
    Object(
        ClassInstance {
            name: "U",
            fields: {
                "v": Int(
                    0,
                ),
                "test_0": Object(
                    Function {
                        descriptor: FunctionDescriptor {
                            name: "test_0",
                            params: Params {
                                has_self: true,
                                min: 0,
                                max: 0,
                            },
                            upvalues: RefCell {
                                value: [],
                            },
                            frame_size: 1,
                            instructions: 2,
                            constants: 0,
                        },
                        upvalues: [],
                        module_id: ModuleId(
                            None,
                        ),
                    },
                ),
                "test_1": Object(
                    Function {
                        descriptor: FunctionDescriptor {
                            name: "test_1",
                            params: Params {
                                has_self: true,
                                min: 0,
                                max: 0,
                            },
                            upvalues: RefCell {
                                value: [],
                            },
                            frame_size: 1,
                            instructions: 2,
                            constants: 0,
                        },
                        upvalues: [],
                        module_id: ModuleId(
                            None,
                        ),
                    },
                ),
            },
            parent: Some(
                ClassType {
                    name: "T",
                    init: None,
                    fields: {},
                    methods: {},
                    parent: None,
                },
            ),
            is_frozen: Cell {
                value: true,
            },
        },
    ),
)
