src/vm/snapshots/hebi__vm__tests__init_data_class_with_method.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
  fn test(self): pass
T()


# Result:
Object(
    ClassInstance {
        name: "T",
        fields: {
            "v": Int(
                0,
            ),
            "test": Object(
                Function {
                    descriptor: FunctionDescriptor {
                        name: "test",
                        params: Params {
                            has_self: true,
                            min: 0,
                            max: 0,
                        },
                        upvalues: RefCell {
                            value: [],
                        },
                        frame_size: 1,
                        instructions: 2,
                        constants: 0,
                    },
                    upvalues: [],
                    module_id: ModuleId(
                        None,
                    ),
                },
            ),
        },
        parent: None,
    },
)
