src/vm/snapshots/hebi__vm__tests__init_simple_class.snap
---
source: src/vm/tests.rs
expression: snapshot
---
Ok(
    Object(
        ClassInstance {
            name: "T",
            fields: {},
            parent: None,
            is_frozen: Cell {
                value: true,
            },
        },
    ),
)
