src/vm/snapshots/hebi__vm__tests__init_simple_class_derived.snap
---
source: src/vm/tests.rs
expression: snapshot
---
Ok(
    Object(
        ClassInstance {
            name: "U",
            fields: {},
            parent: Some(
                ClassType {
                    name: "T",
                    init: None,
                    fields: {},
                    methods: {},
                    parent: None,
                },
            ),
            is_frozen: Cell {
                value: true,
            },
        },
    ),
)
